@@ -359,6 +359,8 @@ class Channel(object):
     * Channel.get_volume
     * Channel.get_busy
     * Channel.get_sound
+    * Channel.queue
+    * Channel.get_queue
     * Channel.set_endevent
     * Channel.get_endevent
     """
@@ -375,6 +377,7 @@ class Channel(object):
         self._volume = 1.0
         self._lvolume = 1.0
         self._rvolume = 1.0
+        self._queue = None
         self._endevent = None
         self._mixer._register_channel(self)
         self._ended_handler = lambda event: self._onended(event)
@@ -407,7 +410,10 @@ class Channel(object):
 
     def _onended(self, event):
         if not self._loops:
-            self.stop()
+            if not self._queue:
+                self.stop()
+            else:
+                self.play(self._queue)
         else:
             if self._loops > 0:
                 self._loops -= 1
@@ -426,6 +432,7 @@ class Channel(object):
             self._sound._sound_objects.append(self._sound_object)
             self._sound = None
             self._sound_object = None
+            self._queue = None
             self._pause = False
             self._loops = 0
             self._volume = 1.0
@@ -487,6 +494,21 @@ class Channel(object):
         """
         return self._sound
 
+    def queue(self, sound):
+        """
+        Queue sound to play after current sound ends.
+        """
+        if not self._sound:
+            self.play(sound)
+        else:
+            self._queue = sound
+
+    def get_queue(self):
+        """
+        Return queue sound.
+        """
+        return self._queue
+
     def set_endevent(self, eventType=None):
         """
         Set endevent for sound channel.
@@ -510,8 +532,6 @@ class Channel(object):
 
     def _nonimplemented_methods(self):
         self.fadeout = lambda *arg: None
-        self.queue = lambda *arg: None
-        self.get_queue = lambda *arg: None
 
 
 class Music(object):
@@ -527,6 +547,7 @@ class Music(object):
     * music.set_volume
     * music.get_volume
     * music.get_busy
+    * music.queue
     * music.set_endevent
     * music.get_endevent
     """
@@ -534,6 +555,7 @@ class Music(object):
     def __init__(self):
         self._channel = Channel(-1)
         self._sound = None
+        self._queue = None
         self._volume = 1.0
 
     def load(self, sound_file):
@@ -558,6 +580,10 @@ class Music(object):
         """
         self._channel.set_volume(self._volume)
         self._channel.play(self._sound, loops)
+        if self._queue:
+            self._channel.queue(self._queue)
+            self._sound = self._queue
+            self._queue = None
         return None
 
     def stop(self):
@@ -606,6 +632,18 @@ class Music(object):
         Check if music playing.
         """
         return self._channel.get_busy()
+
+    def queue(self, sound_file):
+        """
+        Queue sound to play after current sound ends.
+        """
+        if not self._sound:
+            return None
+        if not self._channel.get_busy():
+            self._queue = Sound(sound_file)
+        else:
+            self._sound = Sound(sound_file)
+            self._channel.queue(self._sound)
 
     def set_endevent(self, eventType=None):
         """
